<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity"
    android:background="@drawable/profile_background3"
    android:id="@+id/Main_layout">

    <include layout="@layout/tool_bar"
        android:id="@+id/tool_bar" />
    <!-- Login progress -->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">
    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/text_view_values2"
        android:ems="10"
        android:hint="Your UserName"
        android:inputType="text"
        android:textSize="22dp"
        android:textStyle="bold|italic"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/text_view_values2"
        android:ems="10"
        android:gravity="center"
        android:hint="Your Password"
        android:inputType="text|textPassword"
        android:textSize="22dp"
        android:textStyle="bold|italic"
        android:imeOptions="actionDone"
        />
            <Button
                android:id="@+id/sign_in"
                android:layout_width="119dp"
                android:layout_height="62dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="40dp"
                android:background="@drawable/buttons_background"
                android:textSize="22dp"
                android:textColor="@color/white"
                android:text="@string/action_sign_in"
                android:layout_below="@id/password"
                android:onClick="sign_in"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_in"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="No account yet? "
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/link_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/link"
                android:layout_toEndOf="@id/link"
                android:text="   Create one"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:onClick="sign_up"
                />

        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>
