...
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/api_url"
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/text_view_values2"
            android:ems="10"
            android:hint="Api url"
...
            android:textStyle="bold|italic"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            />

        <Button
            android:id="@+id/Save"
            android:layout_width="119dp"
            android:layout_height="62dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/buttons_background"
            android:textSize="22dp"
            android:textColor="@color/white"
...
