...
            android:cropToPadding="true"
            android:layout_marginTop="20dp"
            />

        <Button
            android:layout_marginTop="30dp"
            android:id="@+id/select"
            android:text="select image"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/buttons_background"
            android:textColor="#fff"
...
